<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="id.ac.unhas.twodo.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:contentDescription="@string/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/baseline_delete_24"
        android:contentDescription="@string/delete_all"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_date"
        android:title="@string/sort_by_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_date_desc"
        android:title="@string/sort_by_date_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_due"
        android:title="@string/sort_by_due"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_due_desc"
        android:title="@string/sort_by_due_desc"
        app:showAsAction="never" />
</menu>
